# T4-Histogram-Base

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: histogram-parallel.cu  histogram-serial.c
